--- a/app/src/main/res/layout/kim_act.xml
+++ b/app/src/main/res/layout/kim_act.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" >
     <data>
         <variable
-            name = "newnamecard"
-            type = "com.example.windows81.mynamecard.NewNamecard"/>
-
+            name = "viewmodel"
+            type = "com.example.windows81.mynamecard.kim.KimModel"/>
+        <variable
+            name="presenter"
+            type="com.example.windows81.mynamecard.kim.KimPresenter"/>
     </data>
-<RelativeLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity"
-    android:layout_margin="20dp">
+    tools:context = ".kim.KimActivity">
 
     <LinearLayout
         android:id="@+id/Picname"
@@ -23,8 +22,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        0
-
         <ImageView
             android:layout_weight="1"
             android:layout_width="0dp"
@@ -48,7 +45,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:text="@{newnamecard.name}"
+                    android:text="@{viewmodel.name}"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -64,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:text="@{newnamecard.id} "
+                    android:text="@{viewmodel.id}"
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -116,7 +113,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
-                android:text="@{newnamecard.address}"/>
+                android:text="@{viewmodel.address}"/>
 
         </LinearLayout>
 
@@ -143,7 +140,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
-                android:text="@{newnamecard.tel}"/>
+                android:text="@{viewmodel.tel}"/>
 
         </LinearLayout>
 
@@ -170,7 +167,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="wrap_content"
-                android:text="@{newnamecard.email}"/>
+                android:text="@{viewmodel.email}"/>
 
         </LinearLayout>
 
@@ -184,17 +181,15 @@
         android:orientation="vertical">
         <Button
             android:id="@+id/btn_backy"
-            android:onClick="process"
+            android:onClick="@{() -> presenter.finishKimActivity()}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/backtoyok"
             android:textColor="@color/orange"
             />
 
-
-
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
 
 </layout>
