--- a/app/src/main/res/layout/yok_act.xml
+++ b/app/src/main/res/layout/yok_act.xml
@@ -1,42 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
-<data>
-    <variable
-        name = "newnamecard"
-        type = "com.example.windows81.mynamecard.NewNamecard"/>
-
-</data>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name = "viewmodel"
+            type = "com.example.windows81.mynamecard.yok.YokModel"/>
+        <variable
+            name="presenter"
+            type="com.example.windows81.mynamecard.yok.YokPresenter"/>
+    </data>
 
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    tools:context = ".MainActivity">
-
-
-   <!-- <RelativeLayout-->
-   <!-- xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:layout_margin="20dp"
-    tools:context=".MainActivity">
--->
+    tools:context = ".yok.YokActivity">
 
     <RelativeLayout
-
         android:id="@+id/parent"
-
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        >
-
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:id="@+id/telephone"
@@ -70,7 +54,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{newnamecard.address}"
+                    android:text="@{viewmodel.address}"
                     android:textAlignment="center"
                     android:textColor="@color/blue" />
 
@@ -112,7 +96,7 @@
                     android:id="@+id/tel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{newnamecard.tel}"
+                    android:text="@{viewmodel.tel}"
                     android:textAlignment="center"
                     android:textColor="@color/blue" />
 
@@ -143,19 +127,11 @@
                     android:id="@+id/textfirstname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{newnamecard.firstName}"
+                    android:text="@{viewmodel.firstName}"
                     android:textAlignment="center"
                     android:textColor="@color/pink"
                     android:textSize="16sp"
                     android:textStyle="bold" />
-
-                <TextView
-
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{newnamecard.address}"
-                    android:textAlignment="center"
-                    android:textColor="@color/blue" />
 
 
             </LinearLayout>
@@ -196,7 +172,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{newnamecard.email}"
+                    android:text="@{viewmodel.email}"
                     android:textAlignment="center"
                     android:textColor="@color/blue"
                     android:textSize="13sp" />
@@ -240,7 +216,7 @@
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{newnamecard.birthday}"
+                    android:text="@{viewmodel.birthday}"
                     android:textAlignment="center"
                     android:textColor="@color/blue" />
 
@@ -252,12 +228,12 @@
     </RelativeLayout>
     <LinearLayout
         android:id="@+id/buttonPanel"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn_nextk"
-            android:onClick="process"
+            android:onClick="@{() -> presenter.navigateToKimActivity()}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/nexttokim"
@@ -266,8 +242,5 @@
     </LinearLayout>
 
 </RelativeLayout>
-
-
-<!--//</RelativeLayout>-->
 
 </layout>
